<resources>
    <string name="app_name">SolsticeChallenge</string>
    <string name="title_contact_detail">Contact Detail</string>
    <string name="contacts_url">https://solstice.applauncher.com/external/contacts.json</string>

    <string name="type_home">Home</string>
    <string name="type_Work">Work</string>
    <string name="type_mobile">Mobile</string>

    <string name="label_name">Name:</string>
    <string name="label_company">Company:</string>
    <string name="label_phone">Phone:</string>
    <string name="label_birthday">Birthday:</string>
    <string name="label_email">Email:</string>
    <string name="label_address">Address:</string>
    <string name="label_website">Website:</string>

    <string name="filler_name">Jenny</string>
    <string name="filler_company">Tutone, Inc.</string>
    <string name="filler_phone">(555)867-5309</string>
    <string name="filler_birthdate">January 1, 1999</string>
    <string name="filler_email">jane@doe.co</string>
    <string name="filler_address">123 Fake St.Chicago, IL 60618</string>
    <string name="filler_website">imgonnamakeyoumine.com</string>
</resources>
